syntax = "proto3";

package remotecli;

message CommandInput {
  string command = 1;
  repeated string args = 2;
}

message CommandOutput {
  string output = 1;
}

service RemoteCLI {
  rpc Shell(CommandInput) returns (CommandOutput);
}
